deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-rest-api
  labels:
    app: python-rest-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-rest-api
  template:
    metadata:
      labels:
        app: python-rest-api
    spec:
      containers:
      - name: python-rest-api
        image: brijkuber/python-flask-rest-api:python-project
        imagePullPolicy: Always
        ports:
        - containerPort: 9001
        livenessProbe:
          httpGet:
            path: /hello
            port: 9001
          initialDelaySeconds: 10
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /hello
            port: 9001
          initialDelaySeconds: 5
          periodSeconds: 5
