ingsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-rest-api-service
spec:
  selector:
    app: python-rest-api
  ports:
    - port: 80
      targetPort: 9001
  type: ClusterIP
