svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-rest-api-service
spec:
  selector:
    app: python-rest-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9001
  type: NodePort
