ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-rest-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx


    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/limit-rps: "2"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "1"
    nginx.ingress.kubernetes.io/limit-conn: "10"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  tls:
  - hosts:
    - brijdev.shop
    secretName: brijdev-shop-tls

  rules:
  - host: brijdev.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-rest-api-service
            port:
              number: 80
